tests/ui/inference/question-mark-type-inference-in-chain.stderr
error[E0282]: type annotations needed
  --> $DIR/question-mark-type-inference-in-chain.rs:31:9
   |
LL |     let mut tags = lines.iter().map(|e| parse(e)).collect()?;
   |         ^^^^^^^^
...
LL |     tags.sort();
   |     ---- type must be known at this point
   |
help: consider giving `tags` an explicit type
   |
LL |     let mut tags: Vec<_> = lines.iter().map(|e| parse(e)).collect()?;
   |                 ++++++++

error[E0283]: type annotations needed
  --> $DIR/question-mark-type-inference-in-chain.rs:41:65
   |
LL |     let mut tags: Vec<Version> = lines.iter().map(|e| parse(e)).collect()?;
   |                                                                 ^^^^^^^ cannot infer type of the type parameter `B` declared on the method `collect`
   |
   = note: the type must implement `FromIterator<std::result::Result<Version, Error>>`
note: required by a bound in `collect`
  --> $SRC_DIR/core/src/iter/traits/iterator.rs:LL:COL
help: consider specifying the generic argument
   |
LL |     let mut tags: Vec<Version> = lines.iter().map(|e| parse(e)).collect::<Result<_, _>>()?;
   |                                                                        ++++++++++++++++

error[E0277]: the `?` operator can only be applied to values that implement `Try`
  --> $DIR/question-mark-type-inference-in-chain.rs:53:20
   |
LL |     let mut tags = lines.iter().map(|e| parse(e)).collect::<Vec<_>>()?;
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the `?` operator cannot be applied to type `Vec<std::result::Result<Version, Error>>`
   |
   = help: the nightly-only, unstable trait `Branch` is not implemented for `Vec<std::result::Result<Version, Error>>`

error[E0277]: a value of type `std::result::Result<Vec<Version>, AnotherError>` cannot be built from an iterator over elements of type `std::result::Result<Version, Error>`
  --> $DIR/question-mark-type-inference-in-chain.rs:72:20
   |
LL |         .collect::<Result<Vec<Version>>>()?;
   |          -------   ^^^^^^^^^^^^^^^^^^^^ value of type `std::result::Result<Vec<Version>, AnotherError>` cannot be built from `std::iter::Iterator<Item=std::result::Result<Version, Error>>`
   |          |
   |          required by a bound introduced by this call
   |
help: the trait `FromIterator<std::result::Result<_, Error>>` is not implemented for `std::result::Result<Vec<Version>, AnotherError>`
      but trait `FromIterator<std::result::Result<_, AnotherError>>` is implemented for it
  --> $SRC_DIR/core/src/result.rs:LL:COL
   = help: for that trait implementation, expected `AnotherError`, found `Error`
note: the method call chain might not have had the expected associated types
  --> $DIR/question-mark-type-inference-in-chain.rs:69:10
   |
LL |     let mut tags = lines
   |                    ----- this expression has type `&[&str]`
LL |
LL |         .iter()
   |          ------ `Iterator::Item` is `&&str` here
LL |
LL |         .map(|e| parse(e))
   |          ^^^^^^^^^^^^^^^^^ `Iterator::Item` changed to `Result<Version, Error>` here
note: required by a bound in `collect`
  --> $SRC_DIR/core/src/iter/traits/iterator.rs:LL:COL

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0277, E0282, E0283.
For more information about an error, try `rustc --explain E0277`.
